TI-49 Refactorizacion de todo el Rest con Mapeo y testing