@@ -7,409 +7,300 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.*;
-import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.*;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.AulaDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.JornadaAulaDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.control.JornadaDAO;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.Aula;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.Jornada;
+import sv.edu.ues.occ.ingenieria.web.dar_tpi135_ingresoues.core.entity.JornadaAula;
 
-import java.util.Collections;
+import java.net.URI;
+import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class JornadaAulaResourceTest {
 
-    private JornadaAulaResource resource;
-    private JornadaAulaDAO jaDAO;
-    private JornadaDAO jornadaDAO;
-    private AulaDAO aulaDAO;
+    @Mock
+    JornadaAulaDAO jornadaAulaDAO;
+
+    @Mock
+    JornadaDAO jornadaDAO;
+
+    @Mock
+    AulaDAO aulaDAO;
+
+    @Mock
+    UriInfo uriInfo;
+
+    @Mock
+    UriBuilder uriBuilder;
+
+    @InjectMocks
+    JornadaAulaResource resource;
+
+    private UUID idJornada;
+    private UUID idAula;
+    private Jornada jornada;
+    private Aula aula;
+    private JornadaAula ja;
+    private JornadaAula entity;
 
     @BeforeEach
-    void setUp() {
-        resource = new JornadaAulaResource();
-        jaDAO = mock(JornadaAulaDAO.class);
-        jornadaDAO = mock(JornadaDAO.class);
-        aulaDAO = mock(AulaDAO.class);
+    void setUp(){
+        idJornada = UUID.randomUUID();
+        idAula = UUID.randomUUID();
 
-        resource.jornadaAulaDAO = jaDAO;
-        resource.jornadaDAO = jornadaDAO;
-        resource.aulaDAO = aulaDAO;
-    }
-
-    /** Construye un JornadaAula con idJornada dado para verificar match. */
-    private JornadaAula buildExisting(UUID idJornada) {
-        Jornada jornada = new Jornada();
+        jornada = new Jornada();
         jornada.setId(idJornada);
-        JornadaAula ja = new JornadaAula();
-        ja.setIdJornada(jornada);
-        return ja;
-    }
 
-    /** Construye un JornadaAula con idAula seteado en el body para create. */
-    private JornadaAula buildEntityWithAula(UUID idAula) {
-        Aula aula = new Aula();
+        aula = new Aula();
         aula.setId(idAula);
-        JornadaAula entity = new JornadaAula();
-        entity.setIdAula(aula);
-        return entity;
+
+        ja = new JornadaAula();
+        ja.setId(1);
+        ja.setIdJornada(jornada);
+        ja.setIdAula(aula);
+
+        entity = new JornadaAula();
     }
 
-   @Nested
-    class FindRange {
-
+    @Nested
+    class FindRange{
         @Test
-        void retorna200_cuandoParametrosSonValidos() {
-            UUID idJornada = UUID.randomUUID();
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
-            when(jaDAO.countByJornada(idJornada)).thenReturn(1L);
-            when(jaDAO.findByJornada(idJornada, 0, 10)).thenReturn(Collections.emptyList());
+        void retorna200ConListaYHeader_cuandoParametrosSonValidos(){
+            when(jornadaDAO.findById(idJornada)).thenReturn(jornada);
+            when(jornadaAulaDAO.findByJornada(idJornada, 0, 100)).thenReturn(List.of(ja));
+            when(jornadaAulaDAO.count()).thenReturn(1);
 
-            Response r = resource.findRange(idJornada, 0, 10);
-
-            assertEquals(200, r.getStatus());
+            Response resp = resource.findRange(idJornada, 0, 100);
+            assertEquals(200, resp.getStatus());
+            List<?> entidad = (List<?>) resp.getEntity();
+            assertEquals(1, entidad.size());
+            assertEquals("1", resp.getHeaderString("X-Total-Count"));
+            verify(jornadaDAO).findById(idJornada);
+            verify(jornadaAulaDAO).findByJornada(idJornada, 0, 100);
+            verify(jornadaAulaDAO).count();
         }
 
         @Test
-        void retorna422_cuandoIdJornadaEsNulo() {
-            Response r = resource.findRange(null, 0, 10);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdJornadaNulo(){
+            Response resp = resource.findRange(null, 0, 100);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idJornada", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoFirstEsNegativo() {
-            Response r = resource.findRange(UUID.randomUUID(), -1, 10);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoFirstInvalido(){
+            Response resp = resource.findRange(idJornada, -1, 100);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first, max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoMaxEsCero() {
-            Response r = resource.findRange(UUID.randomUUID(), 0, 0);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoMaxInvalido(){
+            Response resp = resource.findRange(idJornada, 0, 0);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first, max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoMaxExcedeLimite() {
-            Response r = resource.findRange(UUID.randomUUID(), 0, 101);
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoMaxExcedido(){
+            Response resp = resource.findRange(idJornada, 0, 101);
+            assertEquals(422, resp.getStatus());
+            assertEquals("first, max", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna404_cuandoJornadaNoExiste() {
-            UUID idJornada = UUID.randomUUID();
+        void retorna404_cuandoJornadaNoExiste(){
             when(jornadaDAO.findById(idJornada)).thenReturn(null);
-
-            Response r = resource.findRange(idJornada, 0, 10);
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            UUID idJornada = UUID.randomUUID();
-            when(jornadaDAO.findById(idJornada)).thenThrow(new RuntimeException());
-
-            Response r = resource.findRange(idJornada, 0, 10);
-
-            assertEquals(500, r.getStatus());
+            Response resp = resource.findRange(idJornada, 0, 100);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Jornada with id " + idJornada + " not found", resp.getHeaderString("Not-found-id"));
+            verify(jornadaDAO).findById(idJornada);
+            verifyNoMoreInteractions(jornadaAulaDAO);
         }
     }
 
     @Nested
-    class FindById {
-
+    class FindOne{
         @Test
-        void retorna200_cuandoExiste() {
-            UUID idJornada = UUID.randomUUID();
-            JornadaAula ja = buildExisting(idJornada);
-            when(jaDAO.findById(1)).thenReturn(ja);
-
-            Response r = resource.findById(idJornada, 1);
-
-            assertEquals(200, r.getStatus());
+        void retorna200ConEntidad_cuandoExiste(){
+            when(jornadaAulaDAO.findByJornada(idJornada, 0, Integer.MAX_VALUE)).thenReturn(List.of(ja));
+            Response resp = resource.findOne(idJornada, idAula);
+            assertEquals(200, resp.getStatus());
+            assertEquals(ja, resp.getEntity());
+            verify(jornadaAulaDAO).findByJornada(idJornada, 0, Integer.MAX_VALUE);
         }
 
         @Test
-        void retorna404_cuandoNoExiste() {
-            when(jaDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.findById(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdJornadaNulo(){
+            Response resp = resource.findOne(null, idAula);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idJornada", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaAulaDAO);
         }
 
         @Test
-        void retorna404_cuandoJornadaMismatch() {
-            JornadaAula ja = buildExisting(UUID.randomUUID()); // jornada diferente
-            when(jaDAO.findById(1)).thenReturn(ja);
-
-            Response r = resource.findById(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
+        void retorna422_cuandoIdAulaNulo(){
+            Response resp = resource.findOne(idJornada, null);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAula", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoIdJornadaEsNulo() {
-            Response r = resource.findById(null, 1);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdAulaEsNulo() {
-            Response r = resource.findById(UUID.randomUUID(), null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(jaDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.findById(UUID.randomUUID(), 1);
-
-            assertEquals(500, r.getStatus());
+        void retorna404_cuandoNoSeEncuentra(){
+            when(jornadaAulaDAO.findByJornada(idJornada, 0, Integer.MAX_VALUE)).thenReturn(List.of());
+            Response resp = resource.findOne(idJornada, idAula);
+            assertEquals(404, resp.getStatus());
+            assertEquals("JornadaAula with id jornada="+idJornada+", aula="+idAula+" not found", resp.getHeaderString("Not-found-id"));
+            verify(jornadaAulaDAO).findByJornada(idJornada, 0, Integer.MAX_VALUE);
         }
     }
 
     @Nested
-    class Create {
-
+    class Create{
         @Test
-        void retorna201_cuandoCreacionExitosa() {
-            UUID idJornada = UUID.randomUUID();
-            UUID idAula = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(idAula);
+        void retorna201_cuandoValido(){
+            entity.setId(null);
+            Aula body = new Aula();
+            body.setId(idAula);
+            entity.setIdAula(body);
 
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
-            when(aulaDAO.findById(idAula)).thenReturn(new Aula());
+            when(jornadaDAO.findById(idJornada)).thenReturn(jornada);
+            when(aulaDAO.findById(idAula)).thenReturn(aula);
+            when(uriInfo.getAbsolutePathBuilder()).thenReturn(uriBuilder);
+            when(uriBuilder.path(anyString())).thenReturn(uriBuilder);
+            when(uriBuilder.build()).thenReturn(URI.create("resources/v1/jornada/" + idJornada + "/aula/" + idAula));
 
-            UriInfo uriInfo = mock(UriInfo.class);
+            doAnswer(inv -> {
+                entity.setId(55);
+                return null;
+            }).when(jornadaAulaDAO).create(entity);
 
-            when(uriInfo.getAbsolutePathBuilder())
-                    .thenReturn(UriBuilder.fromUri("http://localhost"));
-
-            Response r = resource.create(idJornada, entity, uriInfo);
-
-            assertEquals(201, r.getStatus());
+            Response resp = resource.create(idJornada, entity, uriInfo);
+            assertEquals(201, resp.getStatus());
+            verify(jornadaDAO).findById(idJornada);
+            verify(aulaDAO).findById(idAula);
+            verify(jornadaAulaDAO).create(entity);
         }
 
         @Test
-        void retorna422_cuandoIdJornadaEsNulo() {
-            Response r = resource.create(null, new JornadaAula(), mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdJornadaNulo(){
+            Response resp = resource.create(null, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idJornada", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, aulaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoEntityEsNula() {
-            Response r = resource.create(UUID.randomUUID(), null, mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoEntidadNula(){
+            Response resp = resource.create(idJornada, null, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity must not be null", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, aulaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoEntityTieneId() {
-            JornadaAula entity = buildEntityWithAula(UUID.randomUUID());
-            entity.setId(1);
-
-            Response r = resource.create(UUID.randomUUID(), entity, mock(UriInfo.class));
-
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoEntityTieneId(){
+            entity.setId(5);
+            Response resp = resource.create(idJornada, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity.id must be null", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, aulaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoIdAulaEsNulo() {
-            // entity sin idAula seteado
-            Response r = resource.create(UUID.randomUUID(), new JornadaAula(), mock(UriInfo.class));
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdAulaNoProvistoEnBody(){
+            entity.setId(null);
+            entity.setIdAula(null);
+            Response resp = resource.create(idJornada, entity, uriInfo);
+            assertEquals(422, resp.getStatus());
+            assertEquals("entity.idAula must be provided in body", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaDAO, aulaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna404_cuandoJornadaNoExiste() {
-            UUID idJornada = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(UUID.randomUUID());
+        void retorna404_cuandoJornadaNoExiste(){
+            entity.setId(null);
+            Aula body = new Aula();
+            body.setId(idAula);
+            entity.setIdAula(body);
+
             when(jornadaDAO.findById(idJornada)).thenReturn(null);
-
-            Response r = resource.create(idJornada, entity, mock(UriInfo.class));
-
-            assertEquals(404, r.getStatus());
+            Response resp = resource.create(idJornada, entity, uriInfo);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Jornada with id " + idJornada + " not found", resp.getHeaderString("Not-found-id"));
+            verify(jornadaDAO).findById(idJornada);
+            verifyNoMoreInteractions(aulaDAO, jornadaAulaDAO);
         }
 
         @Test
-        void retorna404_cuandoAulaNoExiste() {
-            UUID idJornada = UUID.randomUUID();
-            UUID idAula = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(idAula);
+        void retorna404_cuandoAulaNoExiste(){
+            entity.setId(null);
+            Aula body = new Aula();
+            body.setId(idAula);
+            entity.setIdAula(body);
 
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
+            when(jornadaDAO.findById(idJornada)).thenReturn(jornada);
             when(aulaDAO.findById(idAula)).thenReturn(null);
 
-            Response r = resource.create(idJornada, entity, mock(UriInfo.class));
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna409_cuandoHayDuplicateKey() {
-            UUID idJornada = UUID.randomUUID();
-            UUID idAula = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(idAula);
-
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
-            when(aulaDAO.findById(idAula)).thenReturn(new Aula());
-
-
-            RuntimeException cause = new RuntimeException("duplicate key value violates unique constraint");
-            doThrow(new RuntimeException(cause)).when(jaDAO).create(entity);
-
-            Response r = resource.create(idJornada, entity, mock(UriInfo.class));
-
-            assertEquals(409, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoExcepcionSinCause() {
-            UUID idJornada = UUID.randomUUID();
-            UUID idAula = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(idAula);
-
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
-            when(aulaDAO.findById(idAula)).thenReturn(new Aula());
-            doThrow(new RuntimeException("error")).when(jaDAO).create(entity);
-
-            Response r = resource.create(idJornada, entity, mock(UriInfo.class));
-
-            assertEquals(500, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoExcepcionSinMensaje() {
-            UUID idJornada = UUID.randomUUID();
-            UUID idAula = UUID.randomUUID();
-            JornadaAula entity = buildEntityWithAula(idAula);
-
-            when(jornadaDAO.findById(idJornada)).thenReturn(new Jornada());
-            when(aulaDAO.findById(idAula)).thenReturn(new Aula());
-            doThrow(new RuntimeException(new RuntimeException((String) null))).when(jaDAO).create(entity);
-
-            Response r = resource.create(idJornada, entity, mock(UriInfo.class));
-
-            assertEquals(500, r.getStatus());
+            Response resp = resource.create(idJornada, entity, uriInfo);
+            assertEquals(404, resp.getStatus());
+            assertEquals("Aula with id " + idAula + " not found", resp.getHeaderString("Not-found-id"));
+            verify(jornadaDAO).findById(idJornada);
+            verify(aulaDAO).findById(idAula);
+            verifyNoMoreInteractions(jornadaAulaDAO);
         }
     }
 
     @Nested
-    class Update {
-
+    class Delete{
         @Test
-        void retorna200_cuandoActualizacionExitosa() {
-            UUID idJornada = UUID.randomUUID();
-            JornadaAula existing = buildExisting(idJornada);
-            when(jaDAO.findById(1)).thenReturn(existing);
-            when(jaDAO.update(existing)).thenReturn(existing);
-
-            Response r = resource.update(idJornada, 1, new JornadaAula());
-
-            assertEquals(200, r.getStatus());
+        void retorna204_cuandoValido(){
+            when(jornadaAulaDAO.findByJornada(idJornada, 0, Integer.MAX_VALUE)).thenReturn(List.of(ja));
+            Response resp = resource.delete(idJornada, idAula);
+            assertEquals(204, resp.getStatus());
+            verify(jornadaAulaDAO).findByJornada(idJornada, 0, Integer.MAX_VALUE);
+            verify(jornadaAulaDAO).delete(ja);
         }
 
         @Test
-        void retorna422_cuandoIdJornadaEsNulo() {
-            Response r = resource.update(null, 1, new JornadaAula());
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdJornadaNulo(){
+            Response resp = resource.delete(null, idAula);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idJornada", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoIdAulaEsNulo() {
-            Response r = resource.update(UUID.randomUUID(), null, new JornadaAula());
-            assertEquals(422, r.getStatus());
+        void retorna422_cuandoIdAulaNulo(){
+            Response resp = resource.delete(idJornada, null);
+            assertEquals(422, resp.getStatus());
+            assertEquals("idAula", resp.getHeaderString("Missing-parameter"));
+            verifyNoInteractions(jornadaAulaDAO);
         }
 
         @Test
-        void retorna422_cuandoEntityEsNula() {
-            Response r = resource.update(UUID.randomUUID(), 1, null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoExistingEsNulo() {
-            when(jaDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.update(UUID.randomUUID(), 1, new JornadaAula());
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoJornadaMismatch() {
-            JornadaAula existing = buildExisting(UUID.randomUUID()); // jornada diferente
-            when(jaDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.update(UUID.randomUUID(), 1, new JornadaAula());
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(jaDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.update(UUID.randomUUID(), 1, new JornadaAula());
-
-            assertEquals(500, r.getStatus());
-        }
-    }
-
-    @Nested
-    class Delete {
-
-        @Test
-        void retorna204_cuandoEliminacionExitosa() {
-            UUID idJornada = UUID.randomUUID();
-            JornadaAula existing = buildExisting(idJornada);
-            when(jaDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.delete(idJornada, 1);
-
-            assertEquals(204, r.getStatus());
-            verify(jaDAO).delete(existing);
-        }
-
-        @Test
-        void retorna404_cuandoNoExiste() {
-            when(jaDAO.findById(1)).thenReturn(null);
-
-            Response r = resource.delete(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna404_cuandoJornadaMismatch() {
-            JornadaAula existing = buildExisting(UUID.randomUUID()); // jornada diferente
-            when(jaDAO.findById(1)).thenReturn(existing);
-
-            Response r = resource.delete(UUID.randomUUID(), 1);
-
-            assertEquals(404, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdJornadaEsNulo() {
-            Response r = resource.delete(null, 1);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna422_cuandoIdAulaEsNulo() {
-            Response r = resource.delete(UUID.randomUUID(), null);
-            assertEquals(422, r.getStatus());
-        }
-
-        @Test
-        void retorna500_cuandoDAOLanzaExcepcion() {
-            when(jaDAO.findById(1)).thenThrow(new RuntimeException());
-
-            Response r = resource.delete(UUID.randomUUID(), 1);
-
-            assertEquals(500, r.getStatus());
+        void retorna404_cuandoNoSeEncuentra(){
+            when(jornadaAulaDAO.findByJornada(idJornada, 0, Integer.MAX_VALUE)).thenReturn(List.of());
+            Response resp = resource.delete(idJornada, idAula);
+            assertEquals(404, resp.getStatus());
+            assertEquals("JornadaAula with id jornada="+idJornada+", aula="+idAula+" not found", resp.getHeaderString("Not-found-id"));
+            verify(jornadaAulaDAO).findByJornada(idJornada, 0, Integer.MAX_VALUE);
         }
     }
 }
